# library-checker-judge

./: .clinerules  .gitignore  .golangci.yml  .pre-commit-config.yaml  Dockerfile.API  Dockerfile.APIREST  Dockerfile.Firebase  Dockerfile.JUDGE  Dockerfile.METRICS  Dockerfile.MIGRATOR  Dockerfile.UPLOADER  Dockerfile_api  LICENSE  README.md  cloudbuild_api.yaml  cloudbuild_test.yaml  cloudinit.yaml  compose.yml  deploy_problems.py  docker-compose.yml  firebase.json  go.work  go.work.sum  launch_local.sh  run_protoc.sh  stop_local.sh  submit.py  tables.sql  test-all.sh
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
api/: Dockerfile  api.go  api.sh  api_test.go  app.yaml  auth.go  cloudbuild.yaml  database.go  database_test.go  gen.sh  gen_protoc.sh  go.mod  go.sum  hack.go  hack_test.go  judge_registration.go  lang.go  langs.toml  main.go  main_test.go  proto.go  proto_test.go  submission.go  submission_test.go  validate.go  validate_test.go
compiler/: PATH.txt  install.sh  langs.toml
database/: database.go  database_test.go  go.mod  go.sum  hack.go  hack_test.go  metadata.go  metadata_test.go  monitoring.go  monitoring_test.go  problem.go  problem_test.go  ranking.go  ranking_test.go  submission.go  submission_test.go  task.go  task_test.go  user.go  user_statistics.go  user_statistics_test.go  user_test.go  validate.go  validate_test.go
deploy/: cloudbuild.yaml  cloudinit.yml  create_instance.py  deploy.sh  (+8 more)
judge/executor_rust/: Cargo.toml
judge/executor_rust/src/: lib.rs  main.rs
judge/executor_rust/tests/: test.rs
(+457 files in other folders)
